html basic layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-Hello, world! from git.io
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <title>about me</title>
+
+        <!-- Bootstrap -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    </head>
+    <body>
+        
+    </body>
+    <footer class="footer text-center">
+        <div class="container">
+            <p class="text-muted">&copy;2018 Nakamoto, Shigeo</p>
+        </div>
+    </footer>
+</html>
