add japanese version

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <body>
         <div class="page-header">
 	        <h1>&nbsp;My portfolio&nbsp;&nbsp;<small>Shigeo "shigechi" Nakamoto</small></h1>
+	        <ul id="language">
+                <li>English</li>
+                <li><a href="japanese.html">日本語</a></li>
+            </ul>
 	        <div class="row">
                 <div class="col-md-offset-9 col-md-3">
                     <a href="https://github.com/Shigeo-NAKAMOTO" target="_blank"><button type="button" class="btn btn-default">GitHub</button></a>
@@ -54,8 +58,6 @@
                         The main language. In most cases, using Laravel.
                         <li>Ruby</li>
                         Favorite language. Studying Ruby on Rails at <a href="https://railstutorial.jp/" target="_blank">Ruby on Rails Tutorial</a>.
-                        <li>JavaScript</li>
-                        The language I'd like to master. Now studying at <a href="https://dotinstall.com/" target="_blank">dotinstall</a>.
                         <li>HTML5/CSS3, Bootstrap</li>
                         <li>Git, GitHub, Vagrant</li>
                     </ul>
