--- a/japanese.html
+++ b/japanese.html
@@ -24,9 +24,10 @@
                 <li><a href="index.html">English</a></li>
                 <li>日本語</li>
             </ul>
-	        <div class="row">
-                <div class="col-md-offset-9 col-md-3">
+            <div class="row">
+                <div class="col-md-offset-8 col-md-3">
                     <a href="https://github.com/Shigeo-NAKAMOTO" target="_blank"><button type="button" class="btn btn-default">GitHub</button></a>
+                    <a href="https://twitter.com/shigechi" target="_blank"><button type="button" class="btn btn-default">Twitter</button></a>
                     <a href="https://www.facebook.com/shigeo.nakamoto.9" target="_blank"><button type="button" class="btn btn-default">Facebook</button></a>
                     <a href="http://shigechi-64.hatenablog.com/" target="_blank"><button type="button" class="btn btn-default">blog</button></a>
                 </div>
@@ -44,11 +45,11 @@
 情報系授業の受講支援システムの保守運用に2年ほど携わるが、会社や業界の行く末に不安を感じ転職を決意。
 決意したはいいものの特にやりたいことがなかった為、ここから人生の迷走が始まる。</p>
                     <p>公務員、音響制作、ショッピングモールの経理スタッフ、クラウド会計ソフトのカスタマーサポートなどを経て
-建設業の会社で経理をするようになる。この間、VBAでちょっとしたツールを作ったりPHPでホームページを作ったりして
+建設業の会社で経理をするようになる。この間、VBAでちょっとしたツールを作ったりPHPでWebサイトを作ったりして
 少しだけプログラミングのスキルが役に立った。</p>
                     <p>が、それぞれに中途半端なスキルしかない現状に危機感を持ち、周回遅れを自覚しつつもITエンジニアの勉強を始める。</p>
-                    <p>オンラインのスクールで知識をアップデートし、Webアプリケーションの基礎とPHP/Laravelを学ぶ。自作のWebサービスも
-立ち上げ、個人開発を続けつつ勉強を続けている毎日です。</p>
+                    <p>オンラインのスクールで知識をアップデートし、Webアプリケーションの基礎とPHP/Laravelを学ぶ。
+<a href="https://myseb.herokuapp.com/" target="_blank">自作のWebサービス</a>を立ち上げ、個人開発を行いつつ勉強を続けている毎日です。</p>
                 </div>
             </div>
         </div>
