--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
                 <li><a href="japanese.html">日本語</a></li>
             </ul>
 	        <div class="row">
-                <div class="col-md-offset-9 col-md-3">
+                <div class="col-md-offset-8 col-md-3">
                     <a href="https://github.com/Shigeo-NAKAMOTO" target="_blank"><button type="button" class="btn btn-default">GitHub</button></a>
+                    <a href="https://twitter.com/shigechi" target="_blank"><button type="button" class="btn btn-default">Twitter</button></a>
                     <a href="https://www.facebook.com/shigeo.nakamoto.9" target="_blank"><button type="button" class="btn btn-default">Facebook</button></a>
                     <a href="http://shigechi-64.hatenablog.com/" target="_blank"><button type="button" class="btn btn-default">blog</button></a>
                 </div>
