add my strengths

--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
                         TOEIC 725
                         <li>Japanese</li>
                         100% Japanese!
+                        <li>My Strengths</li>
+                        Discipline, Maximizer, Individualization, Context, Connectedness
                     </ul>
                 </div>
             </div>
