add strengths to japanese.html

--- a/japanese.html
+++ b/japanese.html
@@ -50,6 +50,8 @@
                     <p>が、それぞれに中途半端なスキルしかない現状に危機感を持ち、周回遅れを自覚しつつもITエンジニアの勉強を始める。</p>
                     <p>オンラインのスクールで知識をアップデートし、Webアプリケーションの基礎とPHP/Laravelを学ぶ。
 <a href="https://myseb.herokuapp.com/" target="_blank">自作のWebサービス</a>を立ち上げ、個人開発を行いつつ勉強を続けている毎日です。</p>
+                    <p><a href="https://heart-lab.jp/strengthsfinder/" target="_blank">Strengths Finder</a>による私の資質</p>
+                    <p>規律性 / 最上志向 / 個別化 / 原点思考 / 運命思考</p>
                 </div>
             </div>
         </div>
