modify some words

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         TOEIC 725
                         <li>Japanese</li>
                         100% Japanese!
-                        <li>My Strengths (Result of <a href="https://www.gallupstrengthscenter.com/home/en-us/cliftonstrengths-themes-domains" target="_blank">Strengths Finder</a>)</li>
+                        <li>My Strengths (by <a href="https://www.gallupstrengthscenter.com/home/en-us/cliftonstrengths-themes-domains" target="_blank">Strengths Finder</a>)</li>
                         Discipline, Maximizer, Individualization, Context, Connectedness
                     </ul>
                 </div>
