update english page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h2><span class="label label-default">Works</span></h2>
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    An English practice tool for Japanese (<a href="https://myseb.herokuapp.com/" target="_blank">My 瞬間英作文</a>)
+                    An English practice tool for Japanese speaker ( <a href="https://myseb.herokuapp.com/" target="_blank">My 瞬間英作文</a> )
                 </div>
                 <div class="panel-body">
                     <ul>
@@ -51,23 +51,36 @@
             <h2><span class="label label-default">Skills</span></h2>
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Programming Languages/Frameworks, Related technologies
+                    Programming Languages/Frameworks, and Related technologies
                 </div>
                 <div class="panel-body">
                     <ul>
                         <li>PHP</li>
                         The main language. In most cases, using Laravel.
                         <li>Ruby</li>
-                        Favorite language. Studying Ruby on Rails at <a href="https://railstutorial.jp/" target="_blank">Ruby on Rails Tutorial</a>.
+                        Favorite language
+                        <li>MySQL</li>
+                        <li>heroku</li>
                         <li>HTML5/CSS3, Bootstrap</li>
-                        <li>Git, GitHub, Vagrant</li>
+                        <li>Git, GitHub</li>
                     </ul>
                 </div>
             </div>
+            <h2><span class="label label-default">Technical Interests</span></h2>
             <div class="panel panel-default">
-                <div class="panel-heading">
-                    Others
+                <div class="panel-body">
+                    <ul>
+                        <li>SRE/DevOps</li>
+                        <li>CI/CD</li>
+                        <li>Microservices</li>
+                        <li>Docker</li>
+                        <li>AWS/GCP</li>
+                        <li>Python/Golang</li>
+                    </ul>
                 </div>
+            </div>
+            <h2><span class="label label-default">Others</span></h2>
+            <div class="panel panel-default">
                 <div class="panel-body">
                     <ul>
                         <li>Accounting</li>
