--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </ul>
                 </div>
             </div>
-            <h2><span class="label label-default">Technical Interests</span></h2>
+            <h2><span class="label label-default">Interests</span></h2>
             <div class="panel panel-default">
                 <div class="panel-body">
                     <ul>
