revise about_me in japanese

--- a/japanese.html
+++ b/japanese.html
@@ -42,14 +42,15 @@
                     <p>大阪府出身</p>
                     <p>専門学校で初めてプログラミングに触れる。就職活動では某独立系のSIerさんにインターンし、カラオケ屋さんの入退室管理システムなどを作る。</p>
                     <p>卒業後は某SES企業に就職。開発を希望するも運用保守部隊に配属され、とある大学に常駐要員として勤務する。
-情報系授業の受講支援システムの保守運用に2年ほど携わるが、会社や業界の行く末に不安を感じ転職を決意。
+情報系授業の受講支援システムの保守運用に2年ほど携わるが、自身の成長に疑問を感じ転職を決意。
 決意したはいいものの特にやりたいことがなかった為、ここから人生の迷走が始まる。</p>
                     <p>公務員、音響制作、ショッピングモールの経理スタッフ、クラウド会計ソフトのカスタマーサポートなどを経て
 建設業の会社で経理をするようになる。この間、VBAでちょっとしたツールを作ったりPHPでWebサイトを作ったりして
-少しだけプログラミングのスキルが役に立った。</p>
-                    <p>が、それぞれに中途半端なスキルしかない現状に危機感を持ち、周回遅れを自覚しつつもITエンジニアの勉強を始める。</p>
+少しだけプログラミングのスキルが役に立った。（ちなみにこの時期もソフトウェアの開発を仕事にしたい気持ちはあったが、経理などの知識に
+プログラミングのスキルを加えて自分の強みにしていこうと考えていた）</p>
+                    <p>が、やはりソフトウェアエンジニアとして働きたい気持ちが抑え難く、周回遅れを自覚しつつも勉強を再開する。</p>
                     <p>オンラインのスクールで知識をアップデートし、Webアプリケーションの基礎とPHP/Laravelを学ぶ。
-<a href="https://myseb.herokuapp.com/" target="_blank">自作のWebサービス</a>を立ち上げ、個人開発を行いつつ勉強を続けている毎日です。</p>
+<a href="https://myseb.herokuapp.com/" target="_blank">自作のWebサービス</a>を立ち上げ、個人開発を行いつつ今も勉強を続けている毎日です。</p>
                     <p><a href="https://heart-lab.jp/strengthsfinder/" target="_blank">Strengths Finder</a>による私の資質</p>
                     <p>規律性 / 最上志向 / 個別化 / 原点思考 / 運命思考</p>
                 </div>
