add Vue.js on interests in index.html

--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
             <div class="panel panel-default">
                 <div class="panel-body">
                     <ul>
-                        <li>SRE/DevOps</li>
-                        <li>CI/CD</li>
-                        <li>Microservices</li>
+                        <li>Vue.js</li>
+                        <li>Golang</li>
                         <li>Docker</li>
+                        <li>CI/CD</li>
                         <li>AWS/GCP</li>
-                        <li>Python/Golang</li>
+                        <li>Microservices</li>
+                        <li>SRE/DevOps</li>
                     </ul>
                 </div>
             </div>
